2002-10-20  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-compose-transform.c (nr_R8G8B8A8_P_R8G8B8A8_P_R8G8B8A8_N_TRANSFORM):
	Use mmx subcomposers if needed

	* src/libnr/nr_mmx_R8G8B8A8_P_R8G8B8A8_P_R8G8B8A8_N_TRANSFORM.S: New file

2002-10-19  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-compose-transform.c (nr_R8G8B8A8_P_R8G8B8A8_P_R8G8B8A8_N_TRANSFORM_0):
	Split composer
	(nr_R8G8B8A8_P_R8G8B8A8_P_R8G8B8A8_N_TRANSFORM_n): Ditto

2002-10-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr_mmx_R8G8B8A8_P_EMPTY_A8_RGBAP.S: new file

	* src/libnr/nr-path.c (nr_path_matrix_f_bbox_f_union): Moved bpath
	bbox calculation here
	(nr_curve_bbox): Rearrange comparisons

2002-10-17  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/sp-canvas.c: Use idle priority lower than Gtk redraw

	* src/display/nr-arena-shape.c (nr_arena_shape_pick): Use libnr
	distance7wind calculation, if item is not at render state
	(nr_arena_shape_update): Only update bbox, if render state is not
	needed. This gave us approximately 10x faster dragging of comlex shapes

	* src/libnr/nr-path.c (nr_line_wind_distance): New helper method
	(nr_curve_bbox_wind_distance): Ditto
	(nr_path_matrix_f_point_f_bbox_wind_distance): Fast method to find
	bbox and/or wind and/or distance to bezier path

2002-10-16  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/print.h: New file, frontend to printing

	* src/print.c: New file, frontend to printing

2002-10-15  Davide Puricelli  <evo@debian.org>

	* debian/*: Updated

2002-10-15  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-item.c (sp_item_invoke_print): Rename, signature change

	* src/sp-item.h: SPItem::print signature change

	* src/forward.h: Added SPPrintContext

	* src/libnr/testnr.c (main): Fill mask with blocks of transparent, opaque
	and random data. This should be closer to reality and (surprise!) gives better
	performance numbers too!
